<resources>
    <string name="app_name">Github User</string>
    <string name="repository">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="title_favorite">Favorite</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="following_and_followers">following And Followers</string>
</resources>