<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar"
        tools:text="Full Name" />

    <TextView
        android:id="@+id/tv_detail_username"
        style="@style/Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="Username" />

    <ImageView
        android:id="@+id/icon_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        app:srcCompat="@drawable/ic_baseline_apartment_24"
        android:contentDescription="@string/company" />

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        android:contentDescription="@string/location" />

    <ImageView
        android:id="@+id/icon_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        app:srcCompat="@drawable/ic_baseline_book_24"
        android:contentDescription="@string/repository" />

    <ImageView
        android:id="@+id/icon_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/following_and_followers" />

    <TextView
        android:id="@+id/tv_detail_company"
        style="@style/Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="Company" />

    <TextView
        android:id="@+id/tv_detail_location"
        style="@style/Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_location"
        app:layout_constraintTop_toTopOf="@+id/icon_location"
        tools:text="Location" />

    <TextView
        android:id="@+id/tv_detail_repository"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_repository"
        app:layout_constraintStart_toEndOf="@+id/icon_repository"
        app:layout_constraintTop_toTopOf="@+id/icon_repository"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_repository"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_repository" />

    <TextView
        android:id="@+id/tv_detail_followers"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_follow"
        app:layout_constraintStart_toEndOf="@+id/icon_follow"
        app:layout_constraintTop_toTopOf="@+id/icon_follow"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_followers" />

    <TextView
        android:id="@+id/tv_detail_following"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_followers"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_following"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_following" />

    <Button
        android:id="@+id/button_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_to_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_follow" />

    <ProgressBar
        android:id="@+id/progressBarDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_favorite" />


</androidx.constraintlayout.widget.ConstraintLayout>